# image-format-converter

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-04-02-image-format-converter-implementation.md
docs/specs/: 2026-04-02-image-format-converter-design.md  2026-04-03-app-icon-design.md
scripts/: build.ps1
src/image_format_converter/: app.py  config.py  converter.py  main_window.py  models.py
src/image_format_converter/widgets/: __init__.py  drop_zone.py
tests/: conftest.py
tests/gui/: conftest.py  test_main_window.py
tests/unit/: conftest.py  test_bootstrap_smoke.py  test_config.py  test_converter.py
